2005-11-21  Michael Smith <msmith@fluendo.com>

	* ext/faad/gstfaad.c: (gst_faad_setcaps), (gst_faad_event):
	  Don't take STREAM_LOCK in sink event handlers any more.

2005-11-21  Wim Taymans  <wim@fluendo.com>

	* ext/faac/gstfaac.c: (gst_faac_sink_event):
	* gst/qtdemux/qtdemux.c: (gst_qtdemux_handle_src_event):
	* gst/tta/gstttaparse.c: (gst_tta_parse_src_event):
	Fix for stream lock updates.

2005-11-21  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (qtdemux_video_caps):
	  Add DX50, DIVX and DIV3 fourccs (patch by
	  j@bootlab.org, #321903).

2005-11-21  Andy Wingo  <wingo@pobox.com>

	* *.h:
	* *.c: Ran scripts/update-macros. Oh yes.

2005-11-21  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/directfb/dfbvideosink.c:
	(gst_dfbvideosink_get_format_from_caps):
	* ext/sdl/sdlvideosink.c: (gst_sdlvideosink_create):
	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_header),
	(qtdemux_parse), (qtdemux_type_get), (qtdemux_node_dump_foreach),
	(qtdemux_dump_hdlr), (qtdemux_dump_dref), (qtdemux_dump_stsd),
	(qtdemux_dump_dcom), (qtdemux_parse_trak), (qtdemux_video_caps),
	(qtdemux_audio_caps):
	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_v4l2fourcc_to_caps):
	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_fill_format_list),
	(gst_v4l2src_capture_init), (gst_v4l2src_get_size_limits):
	  Update for GST_FOURCC_FORMAT API change.

2005-11-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/audioresample/gstaudioresample.c:
	* ext/polyp/polypsink.c: (gst_polypsink_sink_fixate):
	* gst/librfb/gstrfbsrc.c: (gst_rfbsrc_fixate):
	* gst/modplug/gstmodplug.cc:
	* sys/glsink/glimagesink.c: (gst_glimagesink_fixate):
	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_fixate):
        Rename gst_caps_structure_fixate_* to gst_structure_fixate_*
        (#322027)

2005-11-21  Edgard Lima <edgard.lima@indt.org.br>

	* ext/Makefile.am:
	* ext/ivorbis/vorbisfile.c:
	Now it works in push-mode. Tested with gnomevfssrc location=http://..